--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                   </i>
                 </a>
                 <div class="lang-list">
-                  <a href="#!">العربية</a>
-                  <a href="#!">English</a>
+                  <a href="index.html">العربية</a>
+                  <a href="en/index.html">English</a>
                 </div>
               </div>
             </div>
@@ -128,8 +128,8 @@
                         </i>
                       </a>
                       <div class="lang-list">
-                        <a href="#!">العربية</a>
-                        <a href="#!">English</a>
+                        <a href="index.html">العربية</a>
+                        <a href="en/index.html">English</a>
                       </div>
                     </div>
                   </li>
