--- a/en/index.html
+++ b/en/index.html
@@ -8,11 +8,12 @@
     />
     <title>شركة الخمري</title>
     <link rel="shortcut icon" type="img/png" href="../images/favicon.png" />
-    <link rel="stylesheet" href="../css/bootstrap.min.css" />
-    <!-- <link rel="stylesheet" href="../css/bootstrap.rtl.min.css" /> -->
+    <!-- <link rel="stylesheet" href="../css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="../css/bootstrap.rtl.min.css" />
     <link rel="stylesheet" href="../css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="../css/fancybox.css" />
     <link rel="stylesheet" href="../css/fontawesome.min.css" />
+    <link rel="stylesheet" href="../css/sal.css" />
     <link rel="stylesheet" href="../css/main.css" />
   </head>
 
@@ -53,8 +54,8 @@
               </div>
               <div class="lang-content">
                 <a role="button" class="lang-btn">
-                  <img src="../images/lang/ar.svg" class="flag" />
-                  <span class="text"> العربية </span>
+                  <img src="../images/lang/en.svg" class="flag" />
+                  <span class="text"> English </span>
                   <i class="arrow">
                     <img src="../images/icons/langArr.svg" class="svg" />
                   </i>
@@ -121,8 +122,8 @@
                   <li class="list-item mobile-item">
                     <div class="lang-content">
                       <a role="button" class="lang-btn">
-                        <img src="../images/lang/ar.svg" class="flag" />
-                        <span class="text"> العربية </span>
+                        <img src="../images/lang/en.svg" class="flag" />
+                        <span class="text"> English </span>
                         <i class="arrow">
                           <img src="../images/icons/langArr.svg" class="svg" />
                         </i>
@@ -250,16 +251,20 @@
       <img src="../images/background/about.svg" class="pattern" />
       <div class="container">
         <div class="about-content">
-          <div class="about-head xs-head">
+          <div class="about-head xs-head" data-sal="slide-down">
             <img src="../images/icons/title.svg" />
             <h3 class="about-title">نبذة عن <span>شركة الخمري</span></h3>
           </div>
           <div class="about-text">
-            <div class="about-head">
+            <div class="about-head" data-sal="slide-down">
               <img src="../images/icons/title.svg" />
               <h3 class="about-title">نبذة عن <span>شركة الخمري</span></h3>
             </div>
-            <p class="about-summary">
+            <p
+              class="about-summary"
+              data-sal="slide-down"
+              style="--sal-delay: 0.2s"
+            >
               تعتبر شركة الخمري للفنادق والحج والعمرة واحدة من المؤسسات الجديرة
               بالثقة في هذا المجال منذ تأسيسها عام ‎٠4.0‏ ه- ‎١5/88‏ م بالمملكة
               العربية السعودية ‏ حيث أن المجموعة حاصلة على تصريح بخدمة المعتمرين
@@ -279,11 +284,23 @@
               تحقيق نتائج متميزة تمثلت صورها بتسهيل وراحة المعتمر من قدومه
               للمملكة العربية السعودية إلى مغادرته لبلاده .
             </p>
-            <a href="about.html" class="main-btn about-btn">مشاهدة المزيد</a>
+            <a
+              href="about.html"
+              class="main-btn about-btn"
+              data-sal="slide-down"
+              style="--sal-delay: 0.4s"
+              >مشاهدة المزيد</a
+            >
           </div>
-          <div class="about-imgs loading-img lazy-img-parent">
+          <div
+            class="about-imgs loading-img lazy-img-parent"
+            data-sal="zoom-in"
+          >
             <img data-src="../images/about/1.jpg" class="about-img lazy-img" />
-            <img data-src="../images/about/logo.png" class="about-logo lazy-img" />
+            <img
+              data-src="../images/about/logo.png"
+              class="about-logo lazy-img"
+            />
           </div>
         </div>
       </div>
@@ -298,18 +315,22 @@
       <div class="container">
         <div class="categories-content">
           <div class="section-head">
-            <h2 class="section-title">
+            <h2 class="section-title" data-sal="slide-down">
               <img src="../images/icons/title.svg" />
               قطاعات الخمري
             </h2>
-            <p class="section-summary">
+            <p
+              class="section-summary"
+              data-sal="slide-down"
+              style="--sal-delay: 0.2s"
+            >
               شركة الخمري تعمل في مجموعة متنوعة من القطاعات بما في ذلك الفنادق
               والحج والعمرة، وتسعى دائمًا لتقديم خدمات مميزة لعملائها في المملكة
               العربية السعودية.
             </p>
           </div>
           <div class="categories-list">
-            <div class="category-item">
+            <div class="category-item" data-sal="slide-up">
               <a
                 href="categorySingle.html"
                 class="category-img loading-img lazy-img-parent"
@@ -324,7 +345,11 @@
                 الحج والعمرة
               </p>
             </div>
-            <div class="category-item">
+            <div
+              class="category-item"
+              data-sal="slide-up"
+              style="--sal-delay: 0.15s"
+            >
               <a
                 href="categorySingle.html"
                 class="category-img loading-img lazy-img-parent"
@@ -339,7 +364,11 @@
                 العربية السعودية
               </p>
             </div>
-            <div class="category-item">
+            <div
+              class="category-item"
+              data-sal="slide-up"
+              style="--sal-delay: 0.3s"
+            >
               <a
                 href="categorySingle.html"
                 class="category-img loading-img lazy-img-parent"
@@ -357,7 +386,7 @@
               </p>
             </div>
           </div>
-          <div class="section-more">
+          <div class="section-more" data-sal="slide-down">
             <a href="#!" class="main-btn more-btn"> مشاهدة المزيد </a>
           </div>
         </div>
@@ -373,11 +402,15 @@
       <div class="container">
         <div class="services-content">
           <div class="section-head">
-            <h2 class="section-title">
+            <h2 class="section-title" data-sal="slide-down">
               <img src="../images/icons/title.svg" />
               خدمات الخمري
             </h2>
-            <p class="section-summary">
+            <p
+              class="section-summary"
+              data-sal="slide-down"
+              style="--sal-delay: 0.2s"
+            >
               شركة الخمري تعمل في مجموعة متنوعة من الخدمات بما في ذلك الفنادق
               والحج والعمرة، وتسعى دائمًا لتقديم خدمات مميزة لعملائها في المملكة
               العربية السعودية.
@@ -421,7 +454,7 @@
               </a>
             </div>
           </div>
-          <div class="section-more">
+          <div class="section-more" data-sal="slide-down">
             <a href="#!" class="main-btn more-btn"> مشاهدة المزيد </a>
           </div>
         </div>
@@ -437,7 +470,7 @@
       <div class="container">
         <div class="certificates-content">
           <div class="section-head">
-            <h2 class="section-title">
+            <h2 class="section-title" data-sal="slide-down">
               <img src="../images/icons/title.svg" />
               الشهادات والدروع
             </h2>
@@ -549,7 +582,7 @@
       <div class="container">
         <div class="news-content">
           <div class="section-head">
-            <h2 class="section-title">
+            <h2 class="section-title" data-sal="slide-down">
               <img src="../images/icons/title.svg" />
               الأخبار
             </h2>
@@ -560,7 +593,10 @@
                 href="newsSingle.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/1.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/1.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -583,7 +619,10 @@
                 href="newsSingle.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/2.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/2.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -608,7 +647,10 @@
                 href="newsSingle.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/3.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/3.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -634,7 +676,10 @@
                 href="newsSingle.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/4.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/4.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -672,7 +717,7 @@
       <div class="container">
         <div class="gallery-content">
           <div class="section-head">
-            <h2 class="section-title">
+            <h2 class="section-title" data-sal="slide-down">
               <img src="../images/icons/title.svg" />
               مكتبة الصور والفيديوهات
             </h2>
@@ -778,16 +823,20 @@
         <div class="contact-content">
           <div class="contact-text">
             <div class="section-head">
-              <h2 class="section-title">
+              <h2 class="section-title" data-sal="slide-down">
                 <img src="../images/icons/title.svg" />
                 اتصل بنا
               </h2>
             </div>
-            <h3 class="contact-title">
+            <h3
+              class="contact-title"
+              data-sal="slide-down"
+              style="--sal-delay: 0.2s"
+            >
               نسعد بتواصلكم معنا، وسنقوم بالرد عليكم في أقرب وقت.
             </h3>
             <div class="contact-methods">
-              <div class="contact-method">
+              <div class="contact-method" data-sal="flip-up">
                 <div class="method-icon">
                   <img src="../images/icons/call.svg" />
                 </div>
@@ -798,7 +847,11 @@
                   </strong>
                 </div>
               </div>
-              <div class="contact-method">
+              <div
+                class="contact-method"
+                data-sal="flip-up"
+                style="--sal-delay: 0.15s"
+              >
                 <div class="method-icon">
                   <img src="../images/icons/mail.svg" />
                 </div>
@@ -811,7 +864,11 @@
                   </strong>
                 </div>
               </div>
-              <div class="contact-method">
+              <div
+                class="contact-method"
+                data-sal="flip-up"
+                style="--sal-delay: 0.3s"
+              >
                 <div class="method-icon">
                   <img src="../images/icons/location.svg" />
                 </div>
@@ -822,7 +879,11 @@
                   </strong>
                 </div>
               </div>
-              <div class="contact-method">
+              <div
+                class="contact-method"
+                data-sal="flip-up"
+                style="--sal-delay: 0.45s"
+              >
                 <div class="method-icon">
                   <img src="../images/icons/time.svg" />
                 </div>
@@ -836,7 +897,7 @@
               </div>
             </div>
           </div>
-          <div class="contact-map">
+          <div class="contact-map" data-sal="zoom-in">
             <div id="map">
               <img src="../images/map.jpg" />
             </div>
@@ -850,7 +911,7 @@
     <footer style="background-image: url(../images/background/footer.jpg)">
       <div class="container">
         <div class="footer">
-          <div class="footer-info">
+          <div class="footer-info" data-sal="slide-down">
             <div class="footer-logo">
               <img src="../images/logo-footer.svg" class="img-fluid" />
             </div>
@@ -860,7 +921,11 @@
               العربية السعودية
             </p>
           </div>
-          <div class="footer-nav">
+          <div
+            class="footer-nav"
+            data-sal="slide-down"
+            style="--sal-delay: 0.15s"
+          >
             <h3 class="footer-title">
               <img src="../images/icons/footer.svg" />
               روابط سريعة
@@ -880,7 +945,11 @@
               </li>
             </ul>
           </div>
-          <div class="footer-nav">
+          <div
+            class="footer-nav"
+            data-sal="slide-down"
+            style="--sal-delay: 0.3s"
+          >
             <h3 class="footer-title">
               <img src="../images/icons/footer.svg" />
               خدمات الخمري
@@ -900,7 +969,11 @@
               </li>
             </ul>
           </div>
-          <div class="footer-nav">
+          <div
+            class="footer-nav"
+            data-sal="slide-down"
+            style="--sal-delay: 0.45s"
+          >
             <h3 class="footer-title">
               <img src="../images/icons/footer.svg" />
               قطاعات الخمري
@@ -952,6 +1025,7 @@
     <script src="../js/fancybox.umd.js"></script>
     <script src="../js/svg.js"></script>
     <script src="../js/lazyload.js"></script>
+    <script src="../js/sal.js"></script>
     <script src="../js/main.js"></script>
   </body>
 </html>
