--- a/en/index.html
+++ b/en/index.html
@@ -109,7 +109,7 @@
                     <a href="servicesList.html" class="list-link"> خدماتنا </a>
                   </li>
                   <li class="list-item">
-                    <a href="newsList.html" class="list-link"> أخبارنا </a>
+                    <a href="blogList.html" class="list-link"> أخبارنا </a>
                   </li>
                   <li class="list-item">
                     <a href="gallery.html" class="list-link">
@@ -590,7 +590,7 @@
           <div class="news-grid">
             <div class="news-item">
               <a
-                href="newsSingle.html"
+                href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
                 <img
@@ -610,13 +610,13 @@
                   </span>
                 </div>
                 <h6 class="news-name">
-                  <a href="newsSingle.html"> إستعدادات تامة لموسم حج 1445ه </a>
+                  <a href="blogPost.html"> إستعدادات تامة لموسم حج 1445ه </a>
                 </h6>
               </div>
             </div>
             <div class="news-item">
               <a
-                href="newsSingle.html"
+                href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
                 <img
@@ -636,7 +636,7 @@
                   </span>
                 </div>
                 <h6 class="news-name">
-                  <a href="newsSingle.html">
+                  <a href="blogPost.html">
                     فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة المنورة
                   </a>
                 </h6>
@@ -644,7 +644,7 @@
             </div>
             <div class="news-item">
               <a
-                href="newsSingle.html"
+                href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
                 <img
@@ -664,7 +664,7 @@
                   </span>
                 </div>
                 <h6 class="news-name">
-                  <a href="newsSingle.html">
+                  <a href="blogPost.html">
                     صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
                     تدبير
                   </a>
@@ -673,7 +673,7 @@
             </div>
             <div class="news-item">
               <a
-                href="newsSingle.html"
+                href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
                 <img
@@ -693,7 +693,7 @@
                   </span>
                 </div>
                 <h6 class="news-name">
-                  <a href="newsSingle.html">
+                  <a href="blogPost.html">
                     صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
                     تدبير
                   </a>
@@ -935,7 +935,7 @@
                 <a href="about.html">من نحن</a>
               </li>
               <li>
-                <a href="newsList.html">أخبارنا</a>
+                <a href="blogList.html">أخبارنا</a>
               </li>
               <li>
                 <a href="gallery.html">المركز الاعلامي</a>
