--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
-  <body class="overflow">
+  <body>
     <!-- Start Header -->
     <header>
       <div class="container">
@@ -1426,7 +1426,7 @@
     <script src="js/svg.js"></script>
     <script src="js/map.js"></script>
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9UeezZ2xyNjrwck8SLdh9NxsJp6HhLQc&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"
       async
       defer
     ></script>
