--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@
     </section>
     <!-- End Breadcrumb -->
 
-    <div class="page-content">
+    <div class="page-content about-page">
       <section class="about-section">
         <img src="images/background/about.svg" class="pattern" />
         <div class="container">
