--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,8 @@
                 <div class="method-text">
                   <span class="title"> العنوان </span>
                   <strong class="value">
-                    طريق محمد بن عبد العزيز (طريق ساري) المدينة المنورة
+                    مركز طابة الأعمال, شارع الأمير محمد بن عبد العزيز, العريض,
+                    42314 المدينة المنورة
                   </strong>
                 </div>
               </div>
