--- a/index.html
+++ b/index.html
@@ -624,6 +624,9 @@
                     2,545
                   </span>
                 </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع الحج والعمرة
+                </a>
                 <h6 class="news-name">
                   <a href="blogPost.html"> إستعدادات تامة لموسم حج 1445ه </a>
                 </h6>
@@ -647,6 +650,9 @@
                     2,545
                   </span>
                 </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع الحج والعمرة
+                </a>
                 <h6 class="news-name">
                   <a href="blogPost.html">
                     فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة المنورة
@@ -672,6 +678,9 @@
                     2,545
                   </span>
                 </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع  النقل والمواصلات
+                </a>
                 <h6 class="news-name">
                   <a href="blogPost.html">
                     صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
@@ -698,6 +707,9 @@
                     2,545
                   </span>
                 </div>
+                <a href="categorySingle.html" class="news-category">
+                  فندق سويس انترناشونال طابا السلام
+                </a>
                 <h6 class="news-name">
                   <a href="blogPost.html">
                     صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
