--- a/blogPost.html
+++ b/blogPost.html
@@ -246,102 +246,113 @@
                 <img src="images/icons/title.svg" />
                 أخبار متعلقة
               </h3>
-              <div class="ralated-list">
-                <div class="news-item">
-                  <a
-                    href="blogPost.html"
-                    class="news-img loading-img lazy-img-parent"
-                  >
-                    <img
-                      data-src="images/news/2.jpg"
-                      class="img-fluid lazy-img"
-                    />
-                  </a>
-                  <div class="news-summary">
-                    <div class="news-numbers">
-                      <span class="number">
-                        <img src="images/icons/calender.svg" />
-                        25 آكتوبر 2023
-                      </span>
-                      <span class="number">
-                        <img src="images/icons/eye.svg" />
-                        2,545
-                      </span>
-                    </div>
-                    <a href="categorySingle.html" class="news-category">
-                      قطاع الحج والعمرة
-                    </a>
-                    <h6 class="news-name">
-                      <a href="blogPost.html">
-                        فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة
-                        المنورة
+              <div class="swiper">
+                <div class="ralated-list swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="news-item">
+                      <a
+                        href="blogPost.html"
+                        class="news-img loading-img lazy-img-parent"
+                      >
+                        <img
+                          data-src="images/news/2.jpg"
+                          class="img-fluid lazy-img"
+                        />
                       </a>
-                    </h6>
+                      <div class="news-summary">
+                        <div class="news-numbers">
+                          <span class="number">
+                            <img src="images/icons/calender.svg" />
+                            25 آكتوبر 2023
+                          </span>
+                          <span class="number">
+                            <img src="images/icons/eye.svg" />
+                            2,545
+                          </span>
+                        </div>
+                        <a href="categorySingle.html" class="news-category">
+                          قطاع الحج والعمرة
+                        </a>
+                        <h6 class="news-name">
+                          <a href="blogPost.html">
+                            فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة
+                            المنورة
+                          </a>
+                        </h6>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="news-item">
+                      <a
+                        href="blogPost.html"
+                        class="news-img loading-img lazy-img-parent"
+                      >
+                        <img
+                          data-src="images/news/3.jpg"
+                          class="img-fluid lazy-img"
+                        />
+                      </a>
+                      <div class="news-summary">
+                        <div class="news-numbers">
+                          <span class="number">
+                            <img src="images/icons/calender.svg" />
+                            25 آكتوبر 2023
+                          </span>
+                          <span class="number">
+                            <img src="images/icons/eye.svg" />
+                            2,545
+                          </span>
+                        </div>
+                        <a href="categorySingle.html" class="news-category">
+                          قطاع النقل والمواصلات
+                        </a>
+                        <h6 class="news-name">
+                          <a href="blogPost.html">
+                            صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف
+                            جمعية تدبير
+                          </a>
+                        </h6>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="news-item">
+                      <a
+                        href="blogPost.html"
+                        class="news-img loading-img lazy-img-parent"
+                      >
+                        <img
+                          data-src="images/news/4.jpg"
+                          class="img-fluid lazy-img"
+                        />
+                      </a>
+                      <div class="news-summary">
+                        <div class="news-numbers">
+                          <span class="number">
+                            <img src="images/icons/calender.svg" />
+                            25 آكتوبر 2023
+                          </span>
+                          <span class="number">
+                            <img src="images/icons/eye.svg" />
+                            2,545
+                          </span>
+                        </div>
+                        <a href="categorySingle.html" class="news-category">
+                          فندق سويس انترناشونال طابا السلام
+                        </a>
+                        <h6 class="news-name">
+                          <a href="blogPost.html">
+                            صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف
+                            جمعية تدبير
+                          </a>
+                        </h6>
+                      </div>
+                    </div>
                   </div>
                 </div>
-                <div class="news-item">
-                  <a
-                    href="blogPost.html"
-                    class="news-img loading-img lazy-img-parent"
-                  >
-                    <img
-                      data-src="images/news/3.jpg"
-                      class="img-fluid lazy-img"
-                    />
-                  </a>
-                  <div class="news-summary">
-                    <div class="news-numbers">
-                      <span class="number">
-                        <img src="images/icons/calender.svg" />
-                        25 آكتوبر 2023
-                      </span>
-                      <span class="number">
-                        <img src="images/icons/eye.svg" />
-                        2,545
-                      </span>
-                    </div>
-                    <a href="categorySingle.html" class="news-category">
-                      قطاع النقل والمواصلات
-                    </a>
-                    <h6 class="news-name">
-                      <a href="blogPost.html">
-                        صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف
-                        جمعية تدبير
-                      </a>
-                    </h6>
-                  </div>
-                </div>
-                <div class="news-item">
-                  <a
-                    href="blogPost.html"
-                    class="news-img loading-img lazy-img-parent"
-                  >
-                    <img
-                      data-src="images/news/4.jpg"
-                      class="img-fluid lazy-img"
-                    />
-                  </a>
-                  <div class="news-summary">
-                    <div class="news-numbers">
-                      <span class="number">
-                        <img src="images/icons/calender.svg" />
-                        25 آكتوبر 2023
-                      </span>
-                      <span class="number">
-                        <img src="images/icons/eye.svg" />
-                        2,545
-                      </span>
-                    </div>
-                    <a href="categorySingle.html" class="news-category">
-                      فندق سويس انترناشونال طابا السلام
-                    </a>
-                    <h6 class="news-name">
-                      <a href="blogPost.html">
-                        صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف
-                        جمعية تدبير
-                      </a>
-                    </h6>
-                  </div>
+                <div class="swiper-tools">
+                  <div class="swiper-pagination"></div>
                 </div>
               </div>
             </div>
