--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
                 <div class="method-text">
                   <span class="title"> من فضلك اتصل بنا </span>
                   <strong class="value en">
-                    <a href="tel:920002678"> 920002678 </a>
+                    <a href="tel:+966920002678"> +966920002678 </a>
                   </strong>
                 </div>
               </div>
@@ -1265,7 +1265,7 @@
                 <div class="method-text">
                   <span class="title"> تواصل معنا عبر البريد </span>
                   <strong class="value en">
-                    <a href="tel:info@alkhomri.com.sa ">
+                    <a href="mailto:info@alkhomri.com.sa ">
                       info@alkhomri.com.sa
                     </a>
                   </strong>
